[package]
name = "cargo-alias-exec"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Squirreljetpack/cargo-exec"
readme = "README.md"
keywords = ["cli", "cargo", "exec"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
description = "Extend cargo aliases to arbitrary commands"


[[bin]]
name = "cargo-exec"
path = "src/main.rs"

[dependencies]
regex = "1.11.1"
