[package]
name = "cargo-alias-exec"
version = "0.1.3"
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
edition = "2024"
keywords = ["cli", "cargo", "exec"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Squirreljetpack/cargo-exec"
description = "Extend cargo aliases to arbitrary commands"

[[bin]]
name = "cargo-exec"
path = "src/main.rs"

[dependencies]
regex = "1.11.1"
